Fix net checj